# JGraphicEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Main.cpp  README.md
3rdPartyLibs/glad/src/: glad.c
3rdPartyLibs/glfw/include/GLFW/: glfw3.h
3rdPartyLibs/glfw/src/: cocoa_init.m
Assets/Meshes/Cube/: Cube.mtl
Assets/Shaders/: EnvironmentCapture.vert  Explosion.vert  ModelLoading.vert  OutlineShader.vert  PostProcess.vert  Skybox.vert  Texture.frag
Assets/Shaders/Geometry/: Explosion.geom
Assets/Shaders/PostProcess/: Grayscale.frag  PixelatedMosaic.frag  SharpenKernel.frag
Demos/: Demo01_FlyingCamera.cpp  Demo02_ModelLoading.cpp  Demo03_PostProcessing.cpp
Include/glad/: gl.h
JGraphicEngine/: Main.cpp
JGraphicEngine/Libs/glad/include/glad/: glad.h
JGraphicEngine/Shaders/: DefaultVertex.vert  LightCube.frag
JGraphicEngine/Source/: JCamera.h  JShader.cpp  JShader.h
Resources/Meshes/Dio Brando/: DioMansion.mtl
Resources/Meshes/MedievalWindow/: MedievalWindow.mtl
Shaders/: BlackColor.frag  Color.frag  DefaultVertex.vert  EnvironmentCapture.vert  EnvironmentReflect.frag  LightCube.frag  PhongShading.frag  PostProcessNoEffect.frag
Shaders/PostProcess/: BlurKernel.frag  CRTScanline.frag  Chroma.frag  ColorInverter.frag  EdgeDetection.frag  GrainNoise.frag  Posterize.frag  RadialBlur.frag  WavyDistortion.frag
Source/: JActor.cpp  JCamera.cpp  JCamera.h  JMesh.cpp  JMesh.h  JModel.cpp  JModel.h  JShader.cpp  JShader.h  JTexture.cpp  JTexture.h  Settings.cpp  Settings.h
Source/Core/: Settings.h
Source/Editor/: CMakeLists.txt  DockSpace.cpp  EditorApp.cpp  EditorApp.h  EditorContext.h  ImGuiLayer.cpp  ImGuiLayer.h
Source/Editor/Panels/: ConsolePanel.cpp  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Source/Editor/Private/: DockSpace.h  EditorApp.cpp  ImGuiLayer.h
Source/Editor/Private/Panels/: ConsolePanel.h  InspectorPanel.h  SceneHierarchyPanel.cpp
Source/Editor/Public/: EditorApp.h
Source/Engine/: CMakeLists.txt  JEngine.h
Source/Engine/Core/: EngineState.cpp  EngineState.h  Settings.cpp
Source/Engine/Private/Core/: EngineGlobals.cpp  EngineState.cpp  JEngine.cpp  ServiceContainer.cpp  Settings.cpp  TServiceContainer.h
Source/Engine/Private/Core/Contexts/: FFrameContext.h  FInputContext.h  FWindowContext.h
Source/Engine/Private/Core/Serialization/: JsonReader.cpp  JsonWriter.cpp  JsonWritter.cpp
Source/Engine/Private/Framework/: PostProcessManager.cpp  SceneManager.cpp
Source/Engine/Private/Rendering/: JFramebufferTarget.cpp  JFramebufferTarget.h  JMesh.h  JModel.cpp  JPostProcessor.cpp  JPostProcessor.h  JRenderer.cpp  JShader.cpp  JShader.h  JTexture.cpp  JTexture.h
Source/Engine/Private/Resources/: JMeshAsset.cpp  JModelResource.cpp  JModelResource.h  JResourceManager.cpp  JResourceManager.h  JTextureAsset.cpp
Source/Engine/Private/Scene/: JActor.cpp  JCamera.cpp  JScene.cpp  JScene.h  PostProcessManager.cpp
Source/Engine/Private/Scene/Components/: JComponent.cpp  JTransformComponent.cpp
Source/Engine/Private/Scene/Components/SceneComponents/: JModelComponent.cpp  JSceneComponent.cpp
Source/Engine/Private/Utilities/: UFileSystem.cpp  UPathFinder.cpp
Source/Engine/Public/: JEngine.h
Source/Engine/Public/Core/: Core.h  CoreMinimal.h  EngineGlobals.h  EngineState.h  JCoreObject.h  JEngine.h  ServiceContainer.h  Settings.h
Source/Engine/Public/Core/Contexts/: EViewMode.h  FViewportContext.h
Source/Engine/Public/Core/Serialization/: JsonReader.h  JsonWriter.h
Source/Engine/Public/Framework/: PostProcessManager.h  SceneManager.h
Source/Engine/Public/Rendering/: JRenderer.h  Rendering.h
Source/Engine/Public/Resources/: JMeshAsset.h  JResourceManager.h  JTextureAsset.h
Source/Engine/Public/Scene/: JActor.h  JScene.h
Source/Engine/Public/Scene/Components/: JComponent.h  JTransformComponent.h
Source/Engine/Public/Scene/Components/SceneComponents/: JModelComponent.h  JSceneComponent.h
Source/Engine/Public/Utilities/: UFileSystem.h  UPathFinder.h
Source/Engine/Rendering/: JMesh.cpp  JModel.cpp  JModel.h  JPostProcessor.cpp  JPostProcessor.h  JShader.cpp  JShader.h  JTexture.cpp
Source/Engine/Scene/: JCamera.h
Source/Rendering/: JMesh.cpp  JMesh.h  JModel.cpp  JModel.h  JShader.cpp  JSkybox.cpp  JSkybox.h  JTexture.cpp  JTexture.h  Rendering.h
Source/Scene/: JActor.cpp  JActor.h  JCamera.cpp  Scene.h
